syntax = "proto3";

package blog;

message Blog {
	string id = 1;
	string author_id = 2;
	string title = 3;
	string content = 4;
}

message CreatBlogRequest {
	Blog blog = 1;
}

message CreatBlogResponse {
	Blog blog = 1;
}

message ReadBlogRequest {
	string blog_id = 1;
}

message ReadBlogResponse {
	Blog blog = 1;
}

service BlogService {
	rpc CreateBlog (CreatBlogRequest) returns (CreatBlogResponse) {}
	rpc ReadBlog (ReadBlogRequest) returns (ReadBlogResponse) {}
}